--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "git",
+    "branch"
+  ],
   "bin": {
     "ccaom": "./index.js"
   },
